--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "lavadero-front",
+  "name": "lavadero-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "chromedriver": "^128.0.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.13.0",
+    "next": "14.2.7",
+    "next-pwa": "^5.6.0",
+    "npm": "^10.8.3",
+    "puppeteer": "^23.2.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "selenium-webdriver": "^4.24.0",
+    "twilio": "^5.2.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/next-pwa": "^5.6.9",
+    "@types/node": "^20.16.2",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18",
+    "@types/selenium-webdriver": "^4.1.26",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5.5.4"
   }
 }
